name:                intcode
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/umer/intcode#readme
license:             BSD3
license-file:        LICENSE
author:              Umer Shaikh
maintainer:          umer.f.shaikh@gmail.com
copyright:           2019 Umer Shaikh
category:
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable intcode
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , split
